cluster-init-minikube/rust-app-deploy/05-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: backend
  namespace: default
spec:
  hosts:
    - "*"
  gateways:
    - frontend-gateway
  http:
    - match:
        - uri:
            prefix: /api
      route:
        - destination:
            host: backend
            port:
              number: 8080
